# file-update-discord

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: pytest.yml
bot/: bot.py
bot/utils/: config_reader.py
filetracker/: database.py  filetracker.py
src/bot/: bot.py
src/bot/utils/: config_reader.py
src/file_update_discord/bot/: bot.py
src/file_update_discord/filetracker/: database.py  filetracker.py
tests/: test_bot.py  test_database.py  test_filetracker.py  test_utils.py
