[tool.poetry]
name = "file-update-discord"
version = "0.1.0"
description = ""
authors = ["Kyuzial <kyuzial@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "file_update_discord", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3"
python-dotenv = "^1.0"
validators = "^0.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.*"
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
